# nixos

./: configuration.nix  flake.nix  hardware-configuration.nix
dotfiles/: .gtkrc-2.0
dotfiles/config/hypr/: colors.conf  grimblast.sh  hyprland.conf
dotfiles/config/kitty/: kitty.conf  kitty.conf.bak
dotfiles/config/luna/: shell.qml
dotfiles/config/matugen/: config.toml  overview.txt
dotfiles/config/nvim/: lazy-lock.json
dotfiles/config/quickshell/: shell.qml
dotfiles/config/quickshell/decor/lunarclock/moon/: CMakeLists.txt  moon.cpp  moon.h  shell.nix
dotfiles/fish/: config.fish  fish_variables
dotfiles/hypr/: colors.conf  hyprland.conf  wf-recorder.sh
dotfiles/mango/: config.conf
dotfiles/matugen/: config.toml  overview.txt
dotfiles/matugen/templates/: moonphase  moonphase.sh  overview.txt  qml-colors.qml  starship-colors.toml
dotfiles/nvim/: init.lua
dotfiles/quickshell/: BluetoothControl.qml  ClockHand.qml  Colors.qml  Control.qml  LunarClock.qml  Network.qml  NetworkControl.qml  Notification.qml  Osd.qml  Time.qml  Workspaces.qml  colors.json  network  network.sh  networkMonitor.sh  shell.qml
dotfiles/quickshell/decor/: Shangles.qml
dotfiles/quickshell/menu/: BluetoothMenu.qml  Menu.qml
dotfiles/quickshell/osd/: Osd.qml
dotfiles/quickshell/utils/: Brightness.qml
dotfiles/quickshell/workspace/: Workspaces.qml
pkgs/: icomoon.nix  ligasfmononerdfont-medium.nix  sf-pro-rounded-medium.nix
pkgs/luna/: luna.nix
pkgs/luna/moon/: moon.cpp  (+3 more)
pkgs/starship-moon/: CMakeLists.txt  starship-moon.c  starship-moon.nix
users/: volty.nix
(+34 files in other folders)
